# ocian-rs

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_proposal_table.sql  0002_contactus_table.sql  0003_support_table.sql
src/: main.rs
src/api/: api.rs  mod.rs
src/models/: curriculum.rs  database.rs  email.rs  mod.rs  user.rs
