[package]
name = "ocian-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-multipart = {version = "0.6.1", features = ["derive"]}
futures-util = "0.3.30"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde = "1.0.196"
lettre = { version = "0.11.4", features = ["tokio1-native-tls"] }
dotenv = "0.15.0"
actix-web-validator = "5.0.1"
validator = { version = "0.17.0", features = ["derive"] }
